<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="vm" type="com.angelina.andronova.secretImage.ui.main.MainViewModel"/>
    </data>
    <ScrollView
            android:id="@+id/svPageContents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMainContents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.main.MainFragment">

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swDarkTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/material_M"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDarkThemeLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvDarkThemeLabel"/>

            <TextView
                    android:id="@+id/tvDarkThemeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_M"
                    android:layout_marginTop="24dp"
                    android:text="@string/enable_dark_theme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <View
                    android:id="@+id/vDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDarkThemeLabel"/>

            <TextView
                    android:id="@+id/tvLoginHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_M"
                    android:layout_marginTop="@dimen/material_L"
                    android:text="@string/enter_credentials_to_see_the_image"
                    android:textAppearance="@style/TextAppearance.SecretImageTheme.Headline6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vDivider"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_M"
                    android:layout_marginTop="@dimen/material_L"
                    android:layout_marginEnd="@dimen/material_M"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLoginHeader">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textNoSuggestions"
                        android:selectAllOnFocus="true"
                        android:nextFocusDown="@id/etPassword"
                        android:nextFocusRight="@id/etPassword"
                        android:text="@={vm.usernameInput}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_M"
                    android:layout_marginTop="@dimen/material_M"
                    android:layout_marginEnd="@dimen/material_M"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilUsername">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPassword"
                        android:nextFocusUp="@id/etUsername"
                        android:nextFocusLeft="@id/etUsername"
                        android:nextFocusDown="@id/btLogin"
                        android:nextFocusRight="@id/btLogin"
                        android:selectAllOnFocus="true"
                        android:text="@={vm.passwordInput}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_M"
                    android:layout_marginTop="@dimen/material_M"
                    android:layout_marginEnd="@dimen/material_M"
                    android:padding="@dimen/material_M"
                    android:enabled="@{vm.isButtonEnabled}"
                    android:onClick="@{() -> vm.fetchImage()}"
                    android:text="@string/fetch_the_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>

            <ImageView
                    android:id="@+id/ivPlaceholder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_M"
                    android:layout_marginTop="@dimen/material_M"
                    android:layout_marginEnd="@dimen/material_M"
                    android:layout_marginBottom="@dimen/material_M"
                    android:src="@drawable/ic_image_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btLogin"
                    android:contentDescription="@string/image_placeholder_or_downloaded_image"/>

            <ProgressBar
                    android:id="@+id/pbProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/ivPlaceholder"
                    app:layout_constraintStart_toStartOf="@id/ivPlaceholder"
                    app:layout_constraintTop_toTopOf="@id/ivPlaceholder"
                    app:layout_constraintBottom_toBottomOf="@id/ivPlaceholder"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
